pkg/lang/testdata/types/invalid/optional-too-many-args.ub
t: optional(string, 1, 2)
